--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <header>
             <nav>
                 <ul>
-                    <li class="linkedin"><a href="#"></a>LinkedIn</li>
-                    <li class="github"><a href="#"></a>Github</li>
+                    <li class="linkedin"><a href="https://www.linkedin.com/in/benderfelipe/"></a>LinkedIn</li>
+                    <li class="github"><a href="https://github.com/BenderF"></a>Github</li>
                 </ul>
-                <a href="#"><button>Talk to me!</button></a>
+                <a href="mailto:bender.f98@gmail.com"><button>Talk to me!</button></a>
             </nav>
         </header>
         <h1>Hello there.</h1>
