--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <header>
             <nav>
                 <ul>
-                    <li class="linkedin"><a href="https://www.linkedin.com/in/benderfelipe/"></a>LinkedIn</li>
-                    <li class="github"><a href="https://github.com/BenderF"></a>Github</li>
+                    <li class="linkedin"><a href="https://www.linkedin.com/in/benderfelipe/" target="_blank"><ion-icon name="logo-linkedin" size="large"></ion-icon></a></li>
+                    <li class="github"><a href="https://github.com/BenderF" target="_blank"><ion-icon name="logo-github" size="large" class="icon"></ion-icon></a></li>
                 </ul>
                 <a href="mailto:bender.f98@gmail.com"><button>Talk to me!</button></a>
             </nav>
@@ -26,6 +26,8 @@
         <p>I look forward to working and develop new projects and softwares <br>
             in any area that is needed. In this page you will find some of my projects <br>
             or information about my skills.</p>
-         <script src="scripts.js" async defer></script>
+
+        <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+        <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     </body>
 </html>
