--- a/index.html
+++ b/index.html
@@ -12,10 +12,30 @@
         <header>
             <nav>
                 <ul>
-                    <li class="linkedin"><a href="https://www.linkedin.com/in/benderfelipe/" target="_blank"><ion-icon name="logo-linkedin" size="large"></ion-icon></a></li>
-                    <li class="github"><a href="https://github.com/BenderF" target="_blank"><ion-icon name="logo-github" size="large" class="icon"></ion-icon></a></li>
+<!--                    <li class="linkedin"><a href="https://www.linkedin.com/in/benderfelipe/" target="_blank"><ion-icon name="logo-linkedin" size="large"></ion-icon></a></li>-->
+<!--                    <li class="github"><a href="https://github.com/BenderF" target="_blank"><ion-icon name="logo-github" size="large" class="icon"></ion-icon></a></li>-->
+                    <li class="linkedin">
+                        <a href="https://www.linkedin.com/in/benderfelipe/" target="_blank">
+                            <button class="btn-link" id="linkedIn">
+                                <ion-icon name="logo-linkedin" class="icon"></ion-icon>
+                            </button>
+                        </a>
+                    </li>
+                    <li class="github">
+                        <a href="https://github.com/BenderF" target="_blank">
+                            <button class="btn-link" id="github">
+                                <ion-icon name="logo-github" class="icon"></ion-icon>
+                            </button>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="mailto:bender.f98@gmail.com">
+                            <button class="btn-link" id="email">
+                                <ion-icon name="mail-outline" class="icon"></ion-icon>
+                            </button>
+                        </a></li>
                 </ul>
-                <a href="mailto:bender.f98@gmail.com"><button>Talk to me!</button></a>
+<!--                <a href="mailto:bender.f98@gmail.com"><button>Talk to me!</button></a>-->
             </nav>
         </header>
         <h1>Hello there.</h1>
